--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "bash build.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/oasislabs/wasi-runner/issues"
   },
-  "homepage": "https://github.com/oasislabs/wasi-runner#readme"
+  "homepage": "https://github.com/oasislabs/wasi-runner#readme",
+  "devDependencies": {
+    "get-stream": "^5.1.0",
+    "mocha": "^6.1.4"
+  }
 }
