--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "bash build.sh",
-    "test": "mocha test/*.js"
+    "test": "mocha test/*.js",
+    "test:browser": "mocha init dist/ && webpack-cli && cp test/*.wasm* dist/"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,10 @@
   },
   "homepage": "https://github.com/oasislabs/wasi-runner#readme",
   "devDependencies": {
+    "cross-fetch": "^3.0.2",
     "get-stream": "^5.1.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2"
   }
 }
